Spring Security  - Instructors, Manage Instructor List, Conflict Statistics pages are now using the new security model